整合對話代碼

--- a/WorldOfTheThreeKingdomsEditor/NewEventWindow.xaml
+++ b/WorldOfTheThreeKingdomsEditor/NewEventWindow.xaml
@@ -67,7 +67,7 @@
                     <ColumnDefinition Width="13*"/>
                     <ColumnDefinition Width="512*"/>
                 </Grid.ColumnDefinitions>
-                <Button Content="選擇武將" x:Name="btnPerson0" HorizontalAlignment="Left" Margin="4,5,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
+                <Button Content="選擇武將" x:Name="btnPerson0" Click="Btn_PersonClick" HorizontalAlignment="Left" Margin="4,5,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
                 <Label Content="" x:Name="lblPerson0" Margin="66,2,45,0" VerticalAlignment="Top" RenderTransformOrigin="0.475,0.32" Grid.Column="1"/>
                 <Button Content="武將條件" x:Name="btnPersonCond0" HorizontalAlignment="Left" Margin="4,29,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
                 <Label Content="" x:Name="lblPersonCond0" Margin="66,25,15,0" VerticalAlignment="Top" RenderTransformOrigin="0.475,0.32" Grid.Column="1"/>
@@ -108,7 +108,7 @@
                     <ColumnDefinition Width="13*"/>
                     <ColumnDefinition Width="512*"/>
                 </Grid.ColumnDefinitions>
-                <Button Content="選擇武將" x:Name="btnPerson1" HorizontalAlignment="Left" Margin="4,5,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
+                <Button Content="選擇武將" x:Name="btnPerson1" Click="Btn_PersonClick" HorizontalAlignment="Left" Margin="4,5,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
                 <Label Content="" x:Name="lblPerson1" Margin="66,2,45,0" VerticalAlignment="Top" RenderTransformOrigin="0.475,0.32" Grid.Column="1"/>
                 <Button Content="武將條件" x:Name="btnPersonCond1" HorizontalAlignment="Left" Margin="4,29,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
                 <Label Content="" x:Name="lblPersonCond1" Margin="66,25,15,0" VerticalAlignment="Top" RenderTransformOrigin="0.475,0.32" Grid.Column="1"/>
@@ -129,7 +129,7 @@
                     <ColumnDefinition Width="13*"/>
                     <ColumnDefinition Width="512*"/>
                 </Grid.ColumnDefinitions>
-                <Button Content="選擇武將" x:Name="btnPerson2" HorizontalAlignment="Left" Margin="4,5,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
+                <Button Content="選擇武將" x:Name="btnPerson2" Click="Btn_PersonClick" HorizontalAlignment="Left" Margin="4,5,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
                 <Label Content="" x:Name="lblPerson2" Margin="66,2,45,0" VerticalAlignment="Top" RenderTransformOrigin="0.475,0.32" Grid.Column="1"/>
                 <Button Content="武將條件" x:Name="btnPersonCond2" HorizontalAlignment="Left" Margin="4,29,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
                 <Label Content="" x:Name="lblPersonCond2" Margin="66,25,15,0" VerticalAlignment="Top" RenderTransformOrigin="0.475,0.32" Grid.Column="1"/>
@@ -150,7 +150,7 @@
                     <ColumnDefinition Width="13*"/>
                     <ColumnDefinition Width="512*"/>
                 </Grid.ColumnDefinitions>
-                <Button Content="選擇武將" x:Name="btnPerson3" HorizontalAlignment="Left" Margin="4,5,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
+                <Button Content="選擇武將" x:Name="btnPerson3" Click="Btn_PersonClick" HorizontalAlignment="Left" Margin="4,5,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
                 <Label Content="" x:Name="lblPerson3" Margin="66,2,45,0" VerticalAlignment="Top" RenderTransformOrigin="0.475,0.32" Grid.Column="1"/>
                 <Button Content="武將條件" x:Name="btnPersonCond3" HorizontalAlignment="Left" Margin="4,29,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
                 <Label Content="" x:Name="lblPersonCond3" Margin="66,25,15,0" VerticalAlignment="Top" RenderTransformOrigin="0.475,0.32" Grid.Column="1"/>
@@ -171,7 +171,7 @@
                     <ColumnDefinition Width="13*"/>
                     <ColumnDefinition Width="512*"/>
                 </Grid.ColumnDefinitions>
-                <Button Content="選擇武將" x:Name="btnPerson4" HorizontalAlignment="Left" Margin="4,5,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
+                <Button Content="選擇武將" x:Name="btnPerson4" Click="Btn_PersonClick" HorizontalAlignment="Left" Margin="4,5,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
                 <Label Content="" x:Name="lblPerson4" Margin="66,2,45,0" VerticalAlignment="Top" RenderTransformOrigin="0.475,0.32" Grid.Column="1"/>
                 <Button Content="武將條件" x:Name="btnPersonCond4" HorizontalAlignment="Left" Margin="4,29,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
                 <Label Content="" x:Name="lblPersonCond4" Margin="66,25,15,0" VerticalAlignment="Top" RenderTransformOrigin="0.475,0.32" Grid.Column="1"/>
@@ -192,7 +192,7 @@
                     <ColumnDefinition Width="13*"/>
                     <ColumnDefinition Width="512*"/>
                 </Grid.ColumnDefinitions>
-                <Button Content="選擇武將" x:Name="btnPerson5" HorizontalAlignment="Left" Margin="4,5,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
+                <Button Content="選擇武將" x:Name="btnPerson5" Click="Btn_PersonClick" HorizontalAlignment="Left" Margin="4,5,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
                 <Label Content="" x:Name="lblPerson5" Margin="66,2,45,0" VerticalAlignment="Top" RenderTransformOrigin="0.475,0.32" Grid.Column="1"/>
                 <Button Content="武將條件" x:Name="btnPersonCond5" HorizontalAlignment="Left" Margin="4,29,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
                 <Label Content="" x:Name="lblPersonCond5" Margin="66,25,15,0" VerticalAlignment="Top" RenderTransformOrigin="0.475,0.32" Grid.Column="1"/>
