--- a/WorldOfTheThreeKingdomsEditor/NewEventWindow.xaml
+++ b/WorldOfTheThreeKingdomsEditor/NewEventWindow.xaml
@@ -73,7 +73,7 @@
                 <Label Content="" x:Name="lblPersonCond0" Margin="66,25,15,0" VerticalAlignment="Top" RenderTransformOrigin="0.475,0.32" Grid.Column="1"/>
                 <Button Content="事件效果" x:Name="btnEffect0" Click="Btn_EffectClick" HorizontalAlignment="Left" Margin="4,53,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
                 <Label Content="" x:Name="lblEffect0" Margin="66,50,15,0" VerticalAlignment="Top" RenderTransformOrigin="0.475,0.32" Grid.Column="1"/>
-                <Button Content="列傳" x:Name="btnBiography0" HorizontalAlignment="Left" Margin="4,77,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
+                <Button Content="列傳" x:Name="btnBiography0" Click="Btn_BiographyClick" HorizontalAlignment="Left" Margin="4,77,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
                 <Label Content="" x:Name="lblBiography0" Margin="66,74,15,0" VerticalAlignment="Top" RenderTransformOrigin="0.475,0.32" Grid.Column="1"/>
                 <Button Content="選「是」效果" x:Name="btnYesEffect0" HorizontalAlignment="Left" Margin="4,100,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
                 <Label Content="" x:Name="lblYesEffect0" Margin="66,97,15,0" VerticalAlignment="Top" RenderTransformOrigin="0.475,0.32" Grid.Column="1"/>
@@ -114,7 +114,7 @@
                 <Label Content="" x:Name="lblPersonCond1" Margin="66,25,15,0" VerticalAlignment="Top" RenderTransformOrigin="0.475,0.32" Grid.Column="1"/>
                 <Button Content="事件效果" x:Name="btnEffect1" Click="Btn_EffectClick" HorizontalAlignment="Left" Margin="4,53,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
                 <Label Content="" x:Name="lblEffect1" Margin="66,50,15,0" VerticalAlignment="Top" RenderTransformOrigin="0.475,0.32" Grid.Column="1"/>
-                <Button Content="列傳" x:Name="btnBiography1" HorizontalAlignment="Left" Margin="4,77,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
+                <Button Content="列傳" x:Name="btnBiography1" Click="Btn_BiographyClick" HorizontalAlignment="Left" Margin="4,77,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
                 <Label Content="" x:Name="lblBiography1" Margin="66,74,15,0" VerticalAlignment="Top" RenderTransformOrigin="0.475,0.32" Grid.Column="1"/>
                 <Button Content="選「是」效果" x:Name="btnYesEffect1" HorizontalAlignment="Left" Margin="4,100,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
                 <Label Content="" x:Name="lblYesEffect1" Margin="66,97,15,0" VerticalAlignment="Top" RenderTransformOrigin="0.475,0.32" Grid.Column="1"/>
@@ -135,7 +135,7 @@
                 <Label Content="" x:Name="lblPersonCond2" Margin="66,25,15,0" VerticalAlignment="Top" RenderTransformOrigin="0.475,0.32" Grid.Column="1"/>
                 <Button Content="事件效果" x:Name="btnEffect2" Click="Btn_EffectClick" HorizontalAlignment="Left" Margin="4,53,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
                 <Label Content="" x:Name="lblEffect2" Margin="66,50,15,0" VerticalAlignment="Top" RenderTransformOrigin="0.475,0.32" Grid.Column="1"/>
-                <Button Content="列傳" x:Name="btnBiography2" HorizontalAlignment="Left" Margin="4,77,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
+                <Button Content="列傳" x:Name="btnBiography2" Click="Btn_BiographyClick" HorizontalAlignment="Left" Margin="4,77,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
                 <Label Content="" x:Name="lblBiography2" Margin="66,74,15,0" VerticalAlignment="Top" RenderTransformOrigin="0.475,0.32" Grid.Column="1"/>
                 <Button Content="選「是」效果" x:Name="btnYesEffect2" HorizontalAlignment="Left" Margin="4,100,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
                 <Label Content="" x:Name="lblYesEffect2" Margin="66,97,15,0" VerticalAlignment="Top" RenderTransformOrigin="0.475,0.32" Grid.Column="1"/>
@@ -156,7 +156,7 @@
                 <Label Content="" x:Name="lblPersonCond3" Margin="66,25,15,0" VerticalAlignment="Top" RenderTransformOrigin="0.475,0.32" Grid.Column="1"/>
                 <Button Content="事件效果" x:Name="btnEffect3" Click="Btn_EffectClick" HorizontalAlignment="Left" Margin="4,53,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
                 <Label Content="" x:Name="lblEffect3" Margin="66,50,15,0" VerticalAlignment="Top" RenderTransformOrigin="0.475,0.32" Grid.Column="1"/>
-                <Button Content="列傳" x:Name="btnBiography3" HorizontalAlignment="Left" Margin="4,77,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
+                <Button Content="列傳" x:Name="btnBiography3" Click="Btn_BiographyClick" HorizontalAlignment="Left" Margin="4,77,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
                 <Label Content="" x:Name="lblBiography3" Margin="66,74,15,0" VerticalAlignment="Top" RenderTransformOrigin="0.475,0.32" Grid.Column="1"/>
                 <Button Content="選「是」效果" x:Name="btnYesEffect3" HorizontalAlignment="Left" Margin="4,100,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
                 <Label Content="" x:Name="lblYesEffect3" Margin="66,97,15,0" VerticalAlignment="Top" RenderTransformOrigin="0.475,0.32" Grid.Column="1"/>
@@ -177,7 +177,7 @@
                 <Label Content="" x:Name="lblPersonCond4" Margin="66,25,15,0" VerticalAlignment="Top" RenderTransformOrigin="0.475,0.32" Grid.Column="1"/>
                 <Button Content="事件效果" x:Name="btnEffect4" Click="Btn_EffectClick" HorizontalAlignment="Left" Margin="4,53,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
                 <Label Content="" x:Name="lblEffect4" Margin="66,50,15,0" VerticalAlignment="Top" RenderTransformOrigin="0.475,0.32" Grid.Column="1"/>
-                <Button Content="列傳" x:Name="btnBiography4" HorizontalAlignment="Left" Margin="4,77,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
+                <Button Content="列傳" x:Name="btnBiography4" Click="Btn_BiographyClick" HorizontalAlignment="Left" Margin="4,77,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
                 <Label Content="" x:Name="lblBiography4" Margin="66,74,15,0" VerticalAlignment="Top" RenderTransformOrigin="0.475,0.32" Grid.Column="1"/>
                 <Button Content="選「是」效果" x:Name="btnYesEffect4" HorizontalAlignment="Left" Margin="4,100,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
                 <Label Content="" x:Name="lblYesEffect4" Margin="66,97,15,0" VerticalAlignment="Top" RenderTransformOrigin="0.475,0.32" Grid.Column="1"/>
@@ -198,7 +198,7 @@
                 <Label Content="" x:Name="lblPersonCond5" Margin="66,25,15,0" VerticalAlignment="Top" RenderTransformOrigin="0.475,0.32" Grid.Column="1"/>
                 <Button Content="事件效果" x:Name="btnEffect5" Click="Btn_EffectClick" HorizontalAlignment="Left" Margin="4,53,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
                 <Label Content="" x:Name="lblEffect5" Margin="66,50,15,0" VerticalAlignment="Top" RenderTransformOrigin="0.475,0.32" Grid.Column="1"/>
-                <Button Content="列傳" x:Name="btnBiography5" HorizontalAlignment="Left" Margin="4,77,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
+                <Button Content="列傳" x:Name="btnBiography5" Click="Btn_BiographyClick" HorizontalAlignment="Left" Margin="4,77,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
                 <Label Content="" x:Name="lblBiography5" Margin="66,74,15,0" VerticalAlignment="Top" RenderTransformOrigin="0.475,0.32" Grid.Column="1"/>
                 <Button Content="選「是」效果" x:Name="btnYesEffect5" HorizontalAlignment="Left" Margin="4,100,0,0" VerticalAlignment="Top" Width="75" Grid.ColumnSpan="2"/>
                 <Label Content="" x:Name="lblYesEffect5" Margin="66,97,15,0" VerticalAlignment="Top" RenderTransformOrigin="0.475,0.32" Grid.Column="1"/>
